--- a/test.html
+++ b/test.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hellow world</h1>
-    <h1>Hellow world one</h1>
+    <h1>Hello world</h1>
+    <h1>Hello world one</h1>
     <h1>Hello world two</h1>
+    <h1>Hello world three</h1>
 </body>
 </html>
